# diaphanity

./: README.md  pyproject.toml
diaphanity/: __init__.py
diaphanity/agents/: __init__.py  agent.py  agent_config.py  agent_memory.py  agent_prompt.py  agent_store.py  toolkit.py
diaphanity/llms/: __init__.py  base_config.py  base_llm.py  llm.py  openai.py  openai_config.py
diaphanity/tools/: __init__.py  local_tool.py  tool.py  toolkit.py
