[project]
name = "diaphanity"
description = "Fully customizable, easy to learn, and lightweight AI framework for AI Agents development"
requires-python = ">=3.11"
license = { file = "LICENSE.txt" }
keywords = ["ai", "agent", "framework", "rag", "ai engineering", "llm"]
authors = [
    { name = "Juan José Farina", email = "juanjosefarina.jjf@gmail.com" },
]
version = "0.0.0"
dynamic = ['readme']
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :dependencies",
]
dependencies = [
    "pydantic>=2.12.3",
]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.md"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools-pipfile]

[tool.mypy]
strict = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
fix = true
preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pylint.main]
fail-under = 10
jobs = 4
limit-inference-results = 100
py-version = "3.10"
suggestion-mode = true

[tool.pylint."messages control"]
disable = [
    "import-error",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "fixme",
]
